chore: run code through Prettier for formatting

--- a/client/src/pages/Archive.css
+++ b/client/src/pages/Archive.css
@@ -18,7 +18,7 @@
   font-weight: bold;
   cursor: pointer;
   padding: 0;
-  font-family: 'Cinzel', serif;
+  font-family: "Cinzel", serif;
 }
 
 .entry-details {
